add_executable(mechanics_pp main.cpp
        pendulum.h
        pendulum.cpp
        config.h
        nmx.h
        spring.h
        spring.cpp
        rational.h
        rational.cpp
        righttriangle.cpp
        righttriangle.h
        motion.cpp
        motion.h
        motionuserinput.cpp
        motionuserinput.h
        polynom.cpp
        polynom.h
        cache.h)